--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,10 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
+html {
+    height: 100vh;
+}
+
 nav {
     display: flex;
     flex-direction: row;
@@ -23,4 +27,52 @@ nav {
 
 .homepage--container, .shop--container {
     padding: 15px;
+}
+
+.cart--sticky {
+    display: flex;
+    /* min-width: 300px; */
+    /* min-height: 300px; */
+    border: solid pink 1px;
+    position: sticky;
+}
+
+.shop--container {
+    /* display: flex;
+    flex-flow: row wrap; */
+}
+
+.shop--items {
+    display: flex;
+    flex-flow: row wrap;
+}
+
+.item--container {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    /* min-height: 200px; */
+    /* min-width: 150px; */
+    margin-top: 15px;
+    margin-right: 40px;
+    text-align: center;
+}
+
+.item--container > img {
+    width: 224px;
+    height: 312px;
+}
+
+.item--name {
+    max-width: 224px;
+}
+
+.item--input {
+    max-width: 20px;
+}
+
+.item--add {
+    display: flex;
+    text-align: center;
+    max-width: 30px;
 }
