--- a/src/style.css
+++ b/src/style.css
@@ -29,12 +29,10 @@ nav {
     padding: 15px;
 }
 
-.cart--sticky {
+.cart--container {
     display: flex;
-    /* min-width: 300px; */
-    /* min-height: 300px; */
-    border: solid pink 1px;
-    position: sticky;
+    flex-direction: column;
+    align-items: center;
 }
 
 .shop--container {
@@ -72,7 +70,41 @@ nav {
 }
 
 .item--add {
-    display: flex;
-    text-align: center;
-    max-width: 30px;
+    width: 150px;
 }
+
+.cart-item--container {
+    margin-top: 15px;
+    margin-right: 40px;
+}
+
+.cart--items {
+    display: flex;
+    flex-direction: row;
+}
+
+.cart--checkout {
+    background-color: rgb(56, 76, 83);
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    max-width: 30vw;
+}
+
+.cart--checkout:hover {
+    background-color:rgb(30, 42, 46);
+}
+
+.cart--final-total {
+    margin-top: 40px;
+    font-size: 2em;
+    font-weight: 500;
+}
+
+input[type=number] {
+    -moz-appearance: textfield;
+  }
